@@ -50,6 +50,13 @@ def int_or_nothing(argument):
     return int(argument)
 
 
+def int_or_next(argument):
+    # type: (unicode) -> int
+    if not argument:
+        return -1
+    return int(argument)
+
+
 class TocTree(Directive):
     """
     Directive to notify Sphinx about the hierarchical structure of the docs,
@@ -67,6 +74,7 @@ class TocTree(Directive):
         'hidden': directives.flag,
         'includehidden': directives.flag,
         'numbered': int_or_nothing,
+        'continue': int_or_next,
         'titlesonly': directives.flag,
         'reversed': directives.flag,
     }
@@ -141,6 +149,7 @@ class TocTree(Directive):
         subnode['hidden'] = 'hidden' in self.options
         subnode['includehidden'] = 'includehidden' in self.options
         subnode['numbered'] = self.options.get('numbered', 0)
+        subnode['continue'] = self.options.get('continue', 1)
         subnode['titlesonly'] = 'titlesonly' in self.options
         set_source_info(self, subnode)
         wrappernode = nodes.compound(classes=['toctree-wrapper'])
