@@ -1,0 +1,35 @@
+Continuation of Numbered toctrees
+=================================
+
+Part I
+------
+
+.. toctree::
+	:numbered:
+	:continue:
+	
+	foo
+	bar
+
+Part II
+-------
+
+.. toctree::
+	:numbered:
+	:continue:
+	
+	baz
+
+Part III
+--------
+
+*(todo)*
+
+Part IV
+-------
+
+.. toctree::
+	:numbered:
+	:continue: 6
+	
+	buz
