@@ -344,3 +344,34 @@ def test_get_toctree_for_includehidden(app):
 
     assert_node(toctree[2],
                 [bullet_list, list_item, compact_paragraph, reference, "baz"])
+
+
+@pytest.mark.sphinx('xml', testroot='toctree-continue')
+def test_continue(app):
+    app.build()
+    toctree = TocTree(app.env).get_toctree_for('index', app.builder, collapse=False)
+
+    # Part I
+    assert_node(toctree[0],
+                [bullet_list,
+                    ([list_item, compact_paragraph, reference, u"Foo"],
+                     [list_item, compact_paragraph, reference, u"Bar"])
+                ])
+    assert_node(toctree[0][0][0][0],
+                reference, secnumber=(1,))
+    assert_node(toctree[0][1][0][0],
+                reference, secnumber=(2,))
+
+    # Part II
+    assert_node(toctree[1],
+                [bullet_list, list_item, compact_paragraph, reference, u"Baz"])
+    assert_node(toctree[1][0][0][0],
+                reference, secnumber=(3,))
+
+    # Part IV
+    assert_node(toctree[2],
+                [bullet_list, list_item, compact_paragraph, reference, u"Buz"])
+    assert_node(toctree[2][0][0][0],
+                reference, secnumber=(6,))
+
+
