@@ -45,6 +45,8 @@ Features added
 * ``sphinx-build`` command supports i18n console output
 * Add ``app.add_message_catalog()`` and ``sphinx.locale.get_translations()`` to
   support translation for 3rd party extensions
+* Add ``:continue:`` toctree option to continue (or offset)
+  ``:numbered:`` toctrees (#3357, #4546)
 
 Bugs fixed
 ----------
